--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,22 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
+
+@keyframes rotateAndFade {
+  0% {
+    transform: rotate(0deg);
+
+  }
+  50% {
+    transform: rotate(180deg);
+    background-color: transparent;
+  }
+  100% {
+    transform: rotate(360deg);
+
+  }
+}
+
+.moving-bg {
+  animation: rotateAndFade 8s infinite linear; /* Ajuste a duração da animação aqui */
+}
